final commit with rest apis and thymleaf pages